--- a/NativeUI_2/vue-project/src/assets/test.scss
+++ b/NativeUI_2/vue-project/src/assets/test.scss
@@ -14,9 +14,13 @@
 .n-divider__line {
     /* color: brown; */
     background-color: #363B4Baa !important;
-    transform: translate(0px, -20px);
 }
 
+
+
+h1 {
+    font-weight: 500
+}
 
 // 數據表格的Tbody
 // .n-data-table-base-table-body {
